cleaned up switching regression

--- a/estimation1.ipynb
+++ b/estimation1.ipynb
@@ -13,33 +13,165 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import stats\n",
     "\n",
+    "import datetime\n",
+    "\n",
     "from statsmodels.tsa.regime_switching.markov_autoregression import MarkovAutoregression\n",
     "from statsmodels.tsa.regime_switching.markov_regression import MarkovRegression"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Index([u'VENDOR', u'WW', u'WC', u'LFW', u'LFC', u'WIN', u'SYSTEM', u'YEAR',\n",
+      "       u'MONTH', u'DAY', u'FMOZONE', u'ESC', u'COOLER', u'QLFC', u'QLFW',\n",
+      "       u'QWW', u'QWC', u'ESTQTY', u'DEL', u'MILES', u'NUMSCHL', u'NUMWIN',\n",
+      "       u'POPUL', u'ADJPOP', u'NUM', u'GAS', u'FMO'],\n",
+      "      dtype='object')\n"
+     ]
+    }
+   ],
    "source": [
     "#load data\n",
     "data = pd.read_csv('data/milk.csv')\n",
-    "print data.columns"
+    "print data.columns\n",
+    "\n",
+    "#include incumbent to indentify things"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg1 = data[['WW','FMO']].dropna()\n",
+    "data_dates = data.loc[ (data['DAY']>0) & (data['MONTH']>0)]\n",
+    "dates = pd.to_datetime(data_dates[['YEAR','MONTH','DAY']])\n",
+    "data_dates.loc[:,'DATE'] = dates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                            OLS Regression Results                            \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     WW   R-squared:                       0.034\n",
+      "Model:                            OLS   Adj. R-squared:                  0.034\n",
+      "Method:                 Least Squares   F-statistic:                     138.9\n",
+      "Date:                Wed, 24 Apr 2019   Prob (F-statistic):           1.60e-31\n",
+      "Time:                        15:02:36   Log-Likelihood:                 3793.9\n",
+      "No. Observations:                3925   AIC:                            -7584.\n",
+      "Df Residuals:                    3923   BIC:                            -7571.\n",
+      "Df Model:                           1                                         \n",
+      "Covariance Type:            nonrobust                                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          t      P>|t|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -2.6225      0.071    -37.034      0.000      -2.761      -2.484\n",
+      "FMO            0.3127      0.027     11.784      0.000       0.261       0.365\n",
+      "==============================================================================\n",
+      "Omnibus:                      556.430   Durbin-Watson:                   1.031\n",
+      "Prob(Omnibus):                  0.000   Jarque-Bera (JB):             2788.166\n",
+      "Skew:                          -0.585   Prob(JB):                         0.00\n",
+      "Kurtosis:                       6.960   Cond. No.                         147.\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Standard Errors assume that the covariance matrix of the errors is correctly specified.\n"
+     ]
+    }
+   ],
+   "source": [
+    "reg1 = data_dates[['WW','FMO','DATE']].dropna()\n",
     "reg1 = reg1[reg1['WW']<.4]\n",
-    "reg1 = np.log(reg1)\n",
     "\n",
-    "model = Clusters( reg1['WW'] , np.ones((reg1.shape[0],1)) )\n",
-    "model.weights = np.array([.3,.7])\n",
+    "reg1[['WW','FMO']] = np.log(reg1[['WW','FMO']])\n",
+    "model = sm.OLS(reg1['WW'],sm.add_constant(reg1['FMO']))\n",
+    "result = model.fit()\n",
+    "print result.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/tsa/base/tsa_model.py:221: ValueWarning: An unsupported index was provided and will be ignored when e.g. forecasting.\n",
+      "  ' ignored when e.g. forecasting.', ValueWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        Markov Switching Model Results                        \n",
+      "==============================================================================\n",
+      "Dep. Variable:                     WW   No. Observations:                 3925\n",
+      "Model:               MarkovRegression   Log Likelihood                3793.929\n",
+      "Date:                Wed, 24 Apr 2019   AIC                          -7573.858\n",
+      "Time:                        15:04:37   BIC                          -7529.932\n",
+      "Sample:                             0   HQIC                         -7558.273\n",
+      "                               - 3925                                         \n",
+      "Covariance Type:               approx                                         \n",
+      "                             Regime 0 parameters                              \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -1.2441        nan        nan        nan         nan         nan\n",
+      "FMO            0.0023        nan        nan        nan         nan         nan\n",
+      "                             Regime 1 parameters                              \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "const         -2.6225      0.071    -37.044      0.000      -2.761      -2.484\n",
+      "FMO            0.3127      0.027     11.787      0.000       0.261       0.365\n",
+      "                           Non-switching parameters                           \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "sigma2         0.0085      0.000     44.300      0.000       0.008       0.009\n",
+      "                         Regime transition parameters                         \n",
+      "==============================================================================\n",
+      "                 coef    std err          z      P>|z|      [0.025      0.975]\n",
+      "------------------------------------------------------------------------------\n",
+      "p[0->0]     2.207e-23        nan        nan        nan         nan         nan\n",
+      "p[1->0]     2.478e-31   6.15e-15   4.03e-17      1.000   -1.21e-14    1.21e-14\n",
+      "==============================================================================\n",
+      "\n",
+      "Warnings:\n",
+      "[1] Covariance matrix calculated using numerical (complex-step) differentiation.\n",
+      "[2] Covariance matrix is singular or near-singular, with condition number 1.03e+32. Standard errors may be unstable.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/tsa/regime_switching/markov_switching.py:1782: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  return 1. / (1 - np.diagonal(self.regime_transition).squeeze())\n",
+      "/home/erichschulman/anaconda2/lib/python2.7/site-packages/statsmodels/base/model.py:1092: RuntimeWarning: invalid value encountered in sqrt\n",
+      "  bse_ = np.sqrt(np.diag(self.cov_params()))\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = MarkovRegression(endog=reg1['WW'], exog=sm.add_constant(reg1['FMO']),\n",
+    "                         k_regimes=2, order=0, trend='nc',switching_exog=True)\n",
     "result = model.fit()\n",
     "print result.summary()"
    ]
@@ -63,34 +195,7 @@
     "reg1[['WW', 'FMO', 'MILES', 'GAS','NOSTOP', 'ESTQTY']] = np.log(\n",
     "                                            reg1[['WW', 'FMO', 'MILES', 'GAS', 'NOSTOP', 'ESTQTY']])\n",
     "\n",
-    "print reg1.mean()\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "reg1 = data[['WW','FMO']].dropna()\n",
-    "reg1 = reg1[reg1['WW']<.4]\n",
-    "reg1 = np.log(reg1)\n",
-    "model = sm.OLS(reg1['WW'],sm.add_constant(reg1['FMO']))\n",
-    "result = model.fit()\n",
-    "print result.summary()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "model = MarkovRegression(endog=y, exog=sm.add_constant(x), k_regimes=2, order=0,\n",
-    "                             trend='nc',switching_exog=True, switching_variance=True)\n",
-    "result = model.fit()\n",
-    "print result.summary()"
+    "print reg1.mean()\n"
    ]
   }
  ],
